<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainingAppDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keeplogin">Keep me logged in</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="ok">OK</string>
    <string name="email">Email</string>
    <string name="lastworkout">Last workout</string>
    <string name="lastachievement">Last achievement</string>
    <string name="post">Post to social networks</string>
    <string name="yourprogress">Your progress</string>
    <string name="fb">FB</string>
    <string name="g">G+</string>
    <string name="twitter">Twitter</string>
    <string name="socialnetworks">Social networks</string>
    <string name="syncnow">Synchronize now</string>
    <string name="persnow">Personal data</string>
    <string name="removeinfo">Remove info</string>
    <string name="time">0</string>
    <string name="playlist">Playlist</string>
    <string name="song">Song</string>
    <string name="times">Time in seconds</string>
    <string name="series">Series</string>
    <string name="threshold">Difficulty threshold</string>
    <string name="start">Start activity</string>
    <string name="percent">0%</string>
    <string name="strenght">Get ready!!</string>
    <string name="date">Graph of your workouts</string>
    <string name="duration">Duration</string>
    <string-array name="series">
        <item>Soft training</item>
        <item>Standard boy</item>
        <item>INTENSE 300</item>
    </string-array>
    <string-array name="timeseries">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>
        <string name="adaptsensorvalue">Adapt Sensor Value</string>

</resources>