<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/socialnetworks"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/g" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/twitter" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSync"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/syncnow" />

    <Button
        android:id="@+id/buttonPersonal"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonSync"
        android:layout_marginTop="15dp"
        android:text="@string/persnow" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonPersonal"
        android:layout_marginTop="15dp"
        android:text="@string/removeinfo" />

</RelativeLayout>