<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:text="@string/username" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/EditTextConfirmPass"
        android:layout_marginTop="32dp"
        android:text="@string/ok" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/editTextUsername"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/EditText02"
        android:layout_below="@+id/EditText02"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:text="@string/password" />

    <EditText
        android:id="@+id/EditTextConfirmPass"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:text="@string/confirmPassword" />

</RelativeLayout>