<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_login" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profilePicture"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_below="@+id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/password" />

    <CheckBox
        android:id="@+id/checkBoxKeepLog"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/keeplogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/checkBoxKeepLog"
        android:layout_marginTop="24dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/buttonForgotPass"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="13dp"
        android:text="@string/forgotpass" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_alignLeft="@+id/buttonForgotPass"
        android:layout_alignRight="@+id/buttonForgotPass"
        android:layout_below="@+id/buttonForgotPass"
        android:layout_marginTop="13dp"
        android:text="@string/register" />

</RelativeLayout>