<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >

      <Button
          android:id="@+id/buttonStart"
          android:layout_width="200dp"
          android:layout_height="42dp"
		  android:layout_below="@+id/seekBar_threshold"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          android:text="@string/start" />

      <SeekBar
          android:id="@+id/seekBar_threshold"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_below="@+id/textView1"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="10dp" />

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/spinner2"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="20dp"
          android:text="@string/threshold"
          android:textAppearance="?android:attr/textAppearanceLarge" />

      <Spinner
          android:id="@+id/spinner2"
          android:layout_width="200dp"
          android:layout_height="50dp"
          android:layout_below="@+id/textView3"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="0dp"
          android:prompt="@string/series" />

      <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_below="@+id/spinner1"
          android:layout_marginTop="25dp"
          android:text="@string/series"
          android:textAppearance="?android:attr/textAppearanceLarge" />

      <Spinner
          android:id="@+id/spinner1"
          android:layout_width="200dp"
          android:layout_height="50dp"
          android:layout_below="@+id/textView_time"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="0dp"
          android:prompt="@string/times" />

      <TextView
          android:id="@+id/textView_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="40dp"
          android:text="@string/times"
          android:textAppearance="?android:attr/textAppearanceLarge" />
        
</RelativeLayout>